2010-06-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Added a parameter into
	print_select function to set style a selective 
	options into the select form control

2010-06-23  Sergio Martin <sergio.martin@artica.es>

	* include/auth/mysql.php
	operation/users/user.php
	godmode/users/user_list.php: Added pagination
	to users list in operations and administration

2010-06-22  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/reporting/graph_builder.main.php
	godmode/reporting/graph_builder.php
	godmode/reporting/graph_builder.graph_editor.php
	godmode/reporting/graph_builder.preview.php: Updated year. Clean Code.

2010-06-21  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.main.php
	godmode/reporting/graph_builder.php
	godmode/reporting/graph_builder.graph_editor.php
	godmode/reporting/graph_builder.preview.php: Rewritted
	the combined graphs editor

2010-06-21  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/alerts/alert_list_builder.php: Added link to create template.

2010-06-19  Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/networkmap.php: Added text if twopi binary not
	found.

	* include/functions/functions_networkmap.php: Fixed url to group_view.
	Solves bug 3013775.

2010-06-18  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/user_list.php: Fixed the bug of 
	delete users in Internet Explorer and added the 
	deleting confirmation javascript for bug: 3017261

2010-06-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/users/configure_user.php: Fixed the edition
	of an user after a fail creation for bug: 3017524

2010-06-17  Sergio Martin <sergio.martin@artica.es>

	* operation/users/user.php
	godmode/users/user_list.php: Changed the order
	of the users to id_user

2010-06-17  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/map_builder.php: Fixed the ACL
	permissions for bug: 3017262 

2010-06-14  Sergio Martin <sergio.martin@artica.es>
